Ajout de target blank

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Caméras de circulation du MTO et du MTQ</h1>
         <ul>
-            <li><a href="cameras-mto.html">MTO - Ontario (Ottawa)</a></li>
-            <li><a href="cameras-mtq.html">MTQ - Québec (Gatineau)</a></li>
+            <li><a href="cameras-mto.html" target="_blank">MTO - Ontario (Ottawa)</a></li>
+            <li><a href="cameras-mtq.html" target="_blank">MTQ - Québec (Gatineau)</a></li>
         </ul>
     </body>
 </html>
