Ajout d'une note « appuyez sur F5 »

--- a/cameras-mto.html
+++ b/cameras-mto.html
@@ -7,6 +7,8 @@
       <title>MTO - Ontario - Caméras de circulation</title>
     </head>
     <body>
+        
+        <h1>Appuyez sur F5 pour rafraîchir</h1>
 
         <figure>
         <img src="https://511on.ca/map/Cctv/loc14--4">
