--- a/cameras-mtq.html
+++ b/cameras-mtq.html
@@ -8,6 +8,8 @@
     </head>
     <body>
 
+        <h1>Appuyez sur CTRL + F5 pour rafraîchir</h1>
+        
         <figure>
         <video controls autoplay loop>
         <source src="http://www.quebec511.info/Carte/Fenetres/camera.ashx?id=3580&format=mp4" type="video/mp4"></video>	
