--- a/cameras-mtq.html
+++ b/cameras-mtq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8" />
+      <meta charset="UTF-8">
       <link rel="stylesheet" type="text/css" href="circulation.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <title>MTQ - Québec - Caméras de circulation</title>
